# songsmith-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  songsmith-bugs.md
.claude/commands/: test-songsmith.md
examples/: 01_blank_to_chord_chart.md  02_lyrics_first_ballad.md  03_full_pop_song.md  vocal_renderer_nnsvs.py
reaper_side/: songsmith_helper.lua
songsmith_mcp/: __init__.py  direct_edit.py  reaper_bridge.py  server.py  state.py
songsmith_mcp/arrangement/: __init__.py  bass.py  drums.py  form.py
songsmith_mcp/hitl/: __init__.py  explain.py  proposals.py  teacher.py
songsmith_mcp/lyrics/: __init__.py  align.py  syllabify.py
songsmith_mcp/render/: __init__.py  encode.py  merge.py  pipeline.py  playback.py  score.py  synth.py
songsmith_mcp/render/vocal/: __init__.py  base.py  external.py  formant.py  nnsvs_backend.py  saw.py  select.py
songsmith_mcp/theory/: __init__.py  chords.py  melody.py  voice_leading.py
tests/: conftest.py  test_arrangement.py  test_background_render.py  test_bug_fixes.py  test_direct_edit.py  test_end_to_end.py  test_feedback_fixes.py  test_lyrics.py  test_mcp_stdio.py  test_melody.py  test_proposals.py  test_reaper_bridge.py  test_render.py  test_score.py  test_teacher_and_midi_creator.py  test_theory_chords.py  test_vocal_backend.py  test_vocaloid_session.py  test_voice_leading.py
